2011-08-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add support for both versions 1.0 and 2.0 of the Web Service

2011-07-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Throw RuntimeException if Fluid templates are activated without having ext "fluid" loaded

2011-07-28  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Parametrized URL does not work with WS 2.0 as it lacks the community parameter

2011-07-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove calls to deprecated methods in TYPO3 4.6

2011-07-15  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove calls to deprecated methods in TYPO3 4.6

2011-07-12  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] CE wizards for pi1 and pi2 are using deprecated methods in TYPO3 4.6

2011-06-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use mediumblob instead of mediumtext for the caching table

2011-06-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] #27610: Update documentation for advanced caching with GetLatestChanges
	* [TASK] Update maximal TYPO3 requirement to 4.6
	* [TASK][DOC] Rework the eGov API cache configuration

2011-06-24  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Basic implementation of the WS method GetLatestChanges
	* [TASK] Add additional fields for the scheduler task

2011-06-22  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Reintegrate branch service_versions onto trunk
	* [TASK] #27610: Add scheduler task skeleton to clean up deprecated cache entries
	* [TASK] Remove deprecated methods and configuration options
	* [FEATURE][!!!] #27496: Take advantage of WS method GetServiceVersions
	* [TASK][!!!] #27570: Breaking change in web service 2.0
	* [TASK][!!!] #27570: Update web service end-point

2011-06-22  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.3.0
	* [FEATURE] #27466: Add a link to download the vCard of the office
	* [BUGFIX] #27616: Kanton Bern - Confederation services don't show
